--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@babel/preset-typescript": "^7.15.0",
     "@material-ui/core": "^4.12.3",
     "@material-ui/icons": "^4.11.2",
     "@testing-library/jest-dom": "^5.14.1",
@@ -24,6 +25,7 @@
     "redux": "^4.1.1",
     "redux-logger": "^3.0.6",
     "redux-saga": "^1.1.3",
+    "redux-saga-tester": "^1.0.874",
     "styled-components": "^5.3.1",
     "typescript": "^4.4.2",
     "web-vitals": "^1.1.2"
@@ -31,8 +33,10 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "test": "jest",
+    "test:watch": "jest --u --watch",
+    "format": "prettier --write \"**/*.+(tsx|ts|js|json|css|md)\""
   },
   "eslintConfig": {
     "extends": [
@@ -53,6 +57,25 @@
     ]
   },
   "devDependencies": {
-    "@types/react-router-dom": "^5.1.8"
+    "@babel/preset-env": "^7.11.5",
+    "@babel/preset-react": "^7.10.4",
+    "@types/enzyme": "^3.10.9",
+    "@types/react-router-dom": "^5.1.8",
+    "enzyme": "^3.11.0",
+    "jest": "26.6.0",
+    "enzyme-adapter-react-16": "^1.15.4",
+    "enzyme-to-json": "^3.5.0",
+    "identity-obj-proxy": "^3.0.0",
+    "jest-fetch-mock": "^3.0.3",
+    "prettier": "^2.1.1"
+  },
+  "jest": {
+    "automock": false,
+    "moduleNameMapper": {
+      "\\.(s?css|less)$": "identity-obj-proxy"
+    },
+    "snapshotSerializers": [
+      "enzyme-to-json/serializer"
+    ]
   }
 }
